# FidesIA

./: .gitignore  README.md  analytics.py  app.py  auth.py  config.py  database.py  email_utils.py  fidesia.service  prompts.py  pyproject.toml  rag.py  saints.py  theologia.service
data/: inventaire.json  saints.json
web/: index.html  reset-password.html  robots.txt
web/.well-known/: security.txt
web/css/: chat.css  styles.css
web/js/: api.js  app.js  auth.js  chat.js  corpus.js  metrics.js  profile.js  reset.js  saints.js
